--- a/android_home.gradle
+++ b/android_home.gradle
@@ -1,3 +1,17 @@
+apply plugin: 'java-library'
 
+static String android_home(Project project) {
+    def projectDir = project.rootProject.projectDir;
+    File propertiesFile = new File(projectDir, "local.properties");
+    if (!propertiesFile.exists()) {
+        return "";
+    }
+    Properties localPro = new Properties()
+    localPro.load(new java.io.FileInputStream(propertiesFile))
+    return localPro.getProperty("sdk.dir")
 
+}
 
+dependencies {
+    compileOnly files(android_home(project) + "/platforms/android-19/android.jar")
+}
